--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "opn": "^5.4.0",
     "ora": "^3.0.0",
     "os": "^0.1.1",
+    "promise-sequential": "^1.1.1",
     "util": "^0.11.1"
   },
   "scripts": {
