add skipped cloudformation stacks and S3 buckts

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,8 @@
     	"global-require": "off",
     	"import/no-dynamic-require": "off",
 		"consistent-return": "off",
-		"no-plusplus": "off"
+		"no-plusplus": "off",
+		"indent": "off",
+		"no-unused-vars": "off"
     }
 }
